[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/components/ShootComponent.gd" type="Script" id=1]
[ext_resource path="res://Assets/sound/playerShoot.wav" type="AudioStream" id=2]

[node name="ShootComponent" type="Node"]
script = ExtResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootSound2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
